PersistenceManager +loadContext to load a context file ~Settings for word2vec