@@ -9,6 +9,13 @@ object App {
       .builder()
       .appName("Twitter Sentiment Analyse")
       .master("local[*]")
+      .config("spark.driver.extraJavaOptions", "--add-opens=java.base/java.nio=ALL-UNNAMED")
+      .config("spark.executor.extraJavaOptions", "--add-opens=java.base/java.nio=ALL-UNNAMED")
+      .config("spark.executor.extraJavaOptions",
+        "--add-opens=java.base/java.nio=ALL-UNNAMED " +
+          "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED " +
+          "--add-opens=java.base/java.lang=ALL-UNNAMED " +
+          "--add-opens=java.base/java.util=ALL-UNNAMED")
       .getOrCreate()
     Cli.run(spark,args)
   }
